# DSOSystem

./: .gitmodules  CMakeLists.txt
CMake/: Resources.cmake
DSO/: CMakeLists.txt  main.cpp
DSO/DSO/: ApplicationInstance.cpp  DSOAccumulator.cpp  DSOAcquisition.cpp  DSOPlatform.cpp  DSORootView.cpp  DSOScreenView.cpp
DSO/FreeBSDPlatform/: FreeBSDAcquisition.cpp  FreeBSDApplicationPlatform.cpp  FreeBSDConsoleLogSink.cpp  FreeBSDDSOPlatform.cpp  FreeBSDError.cpp  FreeBSDEventLoop.cpp  FreeBSDManagedDescriptor.cpp  FreeBSDVTRenderer.cpp
DSO/GUI/: Application.cpp  ApplicationPlatform.cpp  ChildEvent.cpp  Event.cpp  FocusEvent.cpp  GUIFont.cpp  KeyEvent.cpp  LayoutConstraint.cpp  LayoutGuide.cpp  LayoutItem.cpp  MoveEvent.cpp  NuklearImplementation.cpp  NuklearRenderer.cpp  Object.cpp  PCFFont.cpp  PaintEvent.cpp  PixmanUtils.cpp  ResizeEvent.cpp  TextView.cpp  View.cpp  Window.cpp
DSO/LinuxPlatform/: LinuxAcquisition.cpp  LinuxApplicationPlatform.cpp  LinuxDRMRenderer.cpp  LinuxDSOPlatform.cpp  LinuxError.cpp  LinuxEventLoop.cpp  LinuxManagedDescriptor.cpp
DSO/Logging/: LogFacility.cpp  LogManager.cpp  LogSink.cpp
DSO/Resources/: resources.rc
DSO/Win32/: HandleWrappers.cpp  WindowsAcquisition.cpp  WindowsApplicationPlatform.cpp  WindowsDSOAccumulator.cpp  WindowsDSOPlatform.cpp  WindowsHostWindow.cpp  WindowsLogSink.cpp
DSO/include/: SkUserConfig.h
DSO/include/DSO/: ApplicationInstance.h  DSOAccumulator.h  DSOAcquisition.h  DSOKeys.h  DSOPlatform.h  DSORootView.h  DSOScreenView.h  IDSOAcquisitionEventReceiver.h
DSO/include/FreeBSDPlatform/: FreeBSDAcquisition.h  FreeBSDApplicationPlatform.h  FreeBSDConsoleLogSink.h  FreeBSDDSOPlatform.h  FreeBSDError.h  FreeBSDEventLoop.h  FreeBSDManagedDescriptor.h  FreeBSDVTRenderer.h  IFreeBSDEventReceiver.h
DSO/include/GUI/: Application.h  ApplicationPlatform.h  ApplicationPlatformInterface.h  ChildEvent.h  DisplayInformation.h  Event.h  FocusEvent.h  GUIFont.h  KeyEvent.h  LayoutConstraint.h  LayoutGuide.h  LayoutItem.h  MoveEvent.h  NuklearPlatform.h  NuklearRenderer.h  Object.h  PCFFont.h  PCFTypes.h  PaintEvent.h  PixmanUtils.h  ResizeEvent.h  TextView.h  View.h  Window.h
DSO/include/LinuxPlatform/: ILinuxDescriptorEventReceiver.h  LinuxAcquisition.h  LinuxApplicationPlatform.h  LinuxDRMRenderer.h  LinuxDSOPlatform.h  LinuxError.h  LinuxEventLoop.h  LinuxManagedDescriptor.h
DSO/include/Logging/: ILogSink.h  LogFacility.h  LogManager.h  LogSink.h
DSO/include/Win32/: HandleWrappers.h  WindowsAcquisition.h  WindowsApplicationPlatform.h  WindowsDSOAccumulator.h  WindowsDSOPlatform.h  WindowsHostWindow.h  WindowsLogSink.h
HostTools/: CMakeLists.txt
HostTools/GenerateResources/: CMakeLists.txt  main.cpp
HostTools/xwincompat/: unistd.h
init/: CMakeLists.txt  FieldBasedFileParser.cpp  FieldBasedFileParser.h  InitConfiguration.cpp  InitConfiguration.h  init.conf  main.cpp
initramfs_init/: CMakeLists.txt  ima-policy  main.cpp
pixman/: CMakeLists.txt  config.h
system_support/: CMakeLists.txt
